modules/gdscript/tests/scripts/parser/errors/duplicated_oninstantiated.gd
extends Node

@oninstantiated @oninstantiated var node

func test():
	pass
